tests/contract_testcases/polkadot/function_types/decls_01.sol
contract test {
            function foo() public {
                function() private a;
            }
        }
// ---- Expect: diagnostics ----
// error: 3:28-35: function type cannot have visibility 'private'
